2008-02-09  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-protocol.h:

	Add "User-Agent" header to discovery request.

2008-02-02  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c: (gssdp_client_init),
	(gssdp_client_set_property), (gssdp_client_dispose),
	(gssdp_client_new), (gssdp_client_set_main_context),
	(_gssdp_client_send_message), (string_list_free), (header_hash),
	(header_equal), (socket_source_cb):
	* libgssdp/gssdp-socket-source.c: (gssdp_socket_source_new):
	* libgssdp/gssdp-socket-source.h:

	Send SSDP messages from dynamic port.

2008-02-01  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c:
	(gssdp_resource_browser_set_property),
	(gssdp_resource_browser_dispose),
	(gssdp_resource_browser_set_active), (clear_cache):

	Emit multiple M-SEARCH requests because UDP is unreliable.
	Based on a patch by Zeeshan Ali.

2008-01-31  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client-private.h:
	* libgssdp/gssdp-client.c: (gssdp_client_class_init),
	(_gssdp_client_send_message), (socket_source_cb):
	* libgssdp/gssdp-marshal.list:
	* libgssdp/gssdp-protocol.h:
	* libgssdp/gssdp-resource-browser.c:
	(gssdp_resource_browser_set_active):
	* libgssdp/gssdp-resource-group.c: (resource_group_timeout),
	(message_received_cb), (construct_al),
	(discovery_response_timeout), (resource_alive), (resource_byebye):
	* libgssdp/gssdp-socket-source.h:

	- Send discovery response to port of origin instead of to SSDP port.
	- Add Date header to discovery response.
	- Add missing G_GNUC_INTERNALs.

2008-01-14  Jorn Baayen  <jorn@openedhand.com>

	* Makefile.am:
	* configure.ac:

	Remove unused translation framework.

2007-09-23  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release 0.4.1.

2007-09-11  Zeeshan Ali  <zeenix@gstreamer.net>

	* tools/gssdp-device-sniffer.c: (setup_treeviews):

	Pass the correct value to n_columns argument of
	gtk_list_store_new(). Fixes bug#501.
